justify comparing observations in dB and linear growth rate

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -345,7 +345,14 @@ case ($u_\parallel = -0.646 u_0$) in the same manner as Fig.
 \ref{fig:2D_F12_zeropitch} except there is an additional black trace in the
 upper panel, which represents the measured JET ICE intensity signal; the continuous
 trace from Fig. 2 in Ref. \cite{Cottrell1993}.
-There are several points worth noting. First, the
+The observations of ICE intensity are plotted on a log scale scaled to match
+the range of the linear MCI growth rates. This juxtaposition is reasonable since
+nonlinear PIC code simulations indicate that all growing modes stop when the
+fastest growing mode becomes nonlinear at time $\tau$. Under the assumption
+that all modes start growing in unison from identical seed amplitudes then the
+$log$ of the amplitude of a mode with growth rate $\gamma$ is proportional to
+$\gamma \tau$, allowing for a comparison with observations also on a log scale.
+There are several points worth noting about this figure. First, the
 growth rate is no longer linear with cyclotron harmonic number. Second,
 harmonics are broader due to the non-zero parallel drift that gives rise to
 strong Doppler shift with increasing $|k_\parallel|$. Third, doublet splitting
