title change, refs names fixup

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -50,7 +50,7 @@
 %\usepackage{iopams}  
 \begin{document}
 
-\title[]{Doublet splitting and linear amplitude characteristics of fusion alpha-particle driven ion cyclotron emission}
+\title[]{Doublet splitting of fusion alpha-particle driven ion cyclotron emission}
 
 \author{J. W. S. Cook}
 
@@ -547,14 +547,16 @@ Cauffman S, Majeski R, McClements K G, and Dendy R O 1995 \textit{Nucl. Fusion} 
 % , "Alfvenic behaviour of alpha particle driven ion cyclotron emission in TFTR,"
 
 \bibitem{Dendy1995}
-Dendy R O, McClements K G, Lashmore-Davies C, Cottrell G A, Majeski R, and Cauffman S 1995 \textit{Nucl. Fusion} \textbf{35} 1733–1742
+Dendy R O {\textit et al} 1995 \textit{Nucl. Fusion} \textbf{35} 1733–1742
+%Dendy R O, McClements K G, Lashmore-Davies C, Cottrell G A, Majeski R, and Cauffman S 1995 \textit{Nucl. Fusion} \textbf{35} 1733–1742
 %  , “Ion cyclotron emission due to collective instability of fusion prod-ucts and beam ions in TFTR and JET,”
 
 \bibitem{Cottrell1988}
 Cottrell G A and Dendy R O 1988 \textit{Phys. Rev. Lett.} \textbf{60} 33-6
 
 \bibitem{Cottrell1993} 
-Cottrell G A, Bhatnagar V, Costa O D, Dendy R O, Jacquinot J, McClements K G, McCune D, Nave M, Smeulders P, and Start D 1993 \textit{Nucl. Fusion} \textbf{33}, 31365–1387
+Cottrell G A {\textit et al} 1993 \textit{Nucl. Fusion} \textbf{33}, 31365–1387
+%Cottrell G A, Bhatnagar V, Costa O D, Dendy R O, Jacquinot J, McClements K G, McCune D, Nave M, Smeulders P, and Start D 1993 \textit{Nucl. Fusion} \textbf{33}, 31365–1387
 % 
 % "Ion cyclotron emission measurements during JET deuterium-tritium experiments,"
 
@@ -563,7 +565,8 @@ Heidbrink W and Sadler G 1994 \textit{Nucl. Fusion} \textbf{34} 535–615
 % "The behaviour of fast ions in tokamak experiments,"
 
 \bibitem{Ichimura2008}
-Ichimura M, Higaki H, Kakimoto S, Yamaguchi Y, Nemoto K, Katano M, Ishikawa M, Moriyama S, and Suzuki T 2008 \textit{Nucl. Fusion} \textbf{48}, 035012
+Ichimura M {\textit et al} 2008 \textit{Nucl. Fusion} \textbf{48}, 035012
+%Ichimura M, Higaki H, Kakimoto S, Yamaguchi Y, Nemoto K, Katano M, Ishikawa M, Moriyama S, and Suzuki T 2008 \textit{Nucl. Fusion} \textbf{48}, 035012
 % , "Observation of spontaneously excited waves in the ion cyclotron frequency range on JT-60u,"
 
 \bibitem{Heidbrink2011}
@@ -584,11 +587,13 @@ Liu L et al 2020  \textit{Nucl. Fusion} \textbf{60} 044002
 % Zhang X, Zhu Y, Qin C, Y Zhao, S Yuan, Y Mao, M Li, K Zhang, J Cheng, L Ai, and Y Cheng
 
 \bibitem{Chapman2017}
-Chapman B, Dendy R O, McClements K, Chapman S C, Yun G, Thatipamula S, and Kim M 2017 \textit{Nucl. Fusion} \textbf{57} 124004
+Chapman B {\textit et al} 2017 \textit{Nucl. Fusion} \textbf{57} 124004
+%Chapman B, Dendy R O, McClements K, Chapman S C, Yun G, Thatipamula S, and Kim M 2017 \textit{Nucl. Fusion} \textbf{57} 124004
 % , "Sub-microsecond temporal evolution of edge density during edge localized modes in KSTAR tokamak plasmas inferred from ion cyclotron emission,"
 
 \bibitem{Chapman2018}
-Chapman B, Dendy R O, Chapman S C, McClements K G, Yun G S and Thatipamula S G 2018 \textit{Nucl. Fusion} \textbf{58} 096027
+Chapman B {\textit et al} 2018 \textit{Nucl. Fusion} \textbf{58} 096027
+%Chapman B, Dendy R O, Chapman S C, McClements K G, Yun G S and Thatipamula S G 2018 \textit{Nucl. Fusion} \textbf{58} 096027
 
 \bibitem{Saito2013}
 Saito K et al 2013 \textit{Plasma Sci. Technol.} \textbf{15} 209–212
@@ -623,7 +628,8 @@ Dendy R O, Lashmore-Davies C N, McClements K G and Cottrell G A 1994 \textit{Phy
 % harmonics"
 
 \bibitem{McClements1996}
-McClements K G, Dendy R O, Lashmore-Davies C N, Cottrell G A, Cauffman S and Majeski R (1996) \textit{Phys. Plasmas} \textbf{3} 543
+McClements K G {\textit et al} 1996 \textit{Phys. Plasmas} \textbf{3} 543
+%McClements K G, Dendy R O, Lashmore-Davies C N, Cottrell G A, Cauffman S and Majeski R (1996) \textit{Phys. Plasmas} \textbf{3} 543
 
 \bibitem{Cook2013}
 Cook J W S, Dendy R O, Chapman S C 2013 \textit{Plasma Physics and Controlled Fusion} \textbf{55} 065003
@@ -634,7 +640,8 @@ Carbajal L, Dendy R O, Chapman S C, and Cook J W S 2014 \textit{Phys. Plasmas} \
 % , "Linear and non-linear physics of the magnetoacoustic cyclotron instability of fusion-born ions in relation to ion cyclotron emission,"
 
 \bibitem{Reman2019}
-Reman B, Dendy R O, Akiyama T, Chapman S C, Cook J W S, Igami  H, Inagaki S, Saito K, and Yun G, 2019 \textit{Nucl. Fusion} \textbf{59} 096013
+Reman B {\textit et al} 2019 \textit{Nucl. Fusion} \textbf{59} 096013
+%Reman B, Dendy R O, Akiyama T, Chapman S C, Cook J W S, Igami  H, Inagaki S, Saito K, and Yun G, 2019 \textit{Nucl. Fusion} \textbf{59} 096013
 % “Interpreting observations of ion cyclotron emission from large helical device plasmas with beam-injected ion populations,”
 
 \bibitem{Carbajal2021}
@@ -642,7 +649,8 @@ Carbajal L, and Calderón F A 2021 \textit{Phys. Plasmas} \textbf{28} 014505
 % , "On the 2D dynamics of the magnetoacoustic cyclotron instability driven by fusion-born ions",
 
 \bibitem{Sharapov2014}
-Sharapov S E , Lilley M K, Akers R, Ayed N B, Cecconello M, Cook J W S, Cunningham G, and Verwichte E 2014 \textit{Phys. Plasmas} \textbf{21} 082501
+Sharapov S E {\textit et al} 2014 \textit{Phys. Plasmas} \textbf{21} 082501
+%Sharapov S E, Lilley M K, Akers R, Ayed N B, Cecconello M, Cook J W S, Cunningham G, and Verwichte E 2014 \textit{Phys. Plasmas} \textbf{21} 082501
 % , "Bi-directional Alfvén cyclotron instabilities in the mega-amp spherical tokamak"
 
 \bibitem{Gorelenkov2016}
@@ -657,7 +665,8 @@ F{\"u}l{\"o}p T, Lisak M, Kolesnichenko Ya I, and Anderson D, 2000 \textit{Phys.
 % “The radial and poloidal localization of fast magnetoacoustic eigenmodes in tokamaks,”
 
 \bibitem{Heidbrink2006}
-Heidbrink W W, Fredrickson E, Gorelenkov N N, Rhodes T, Zeeland  M A 2006 \textit{Nucl. Fusion} \textbf{46} 324
+Heidbrink W W {\textit et al} A 2006 \textit{Nucl. Fusion} \textbf{46} 324
+%Heidbrink W W, Fredrickson E, Gorelenkov N N, Rhodes T, Zeeland M A 2006 \textit{Nucl. Fusion} \textbf{46} 324
 % Observation of compressional Alfvén eigenmodes (CAE) in a conventional tokamak.
 
 \bibitem{Bezanson2017}
@@ -665,7 +674,8 @@ Bezanson J, Edelman A, Karpinski S, and Shah V B 2017 \textit{SIAM review} \text
 % Julia: A fresh approach to numerical computing,
 
 \bibitem{Fredrickson2019}
-Fredrickson E D, Gorelenkov  N N, Bell R E, Diallo A, LeBlanc B P, Podestà  M, and NSTX Team 2019 \textit{Physics of Plasmas} \textbf{26}, 032111
+Fredrickson E D {\textit et al} 2019 \textit{Physics of Plasmas} \textbf{26}, 032111
+%Fredrickson E D, Gorelenkov  N N, Bell R E, Diallo A, LeBlanc B P, Podestà  M, and NSTX Team 2019 \textit{Physics of Plasmas} \textbf{26}, 032111
 % "Emission in the ion cyclotron range of frequencies (ICE) on NSTX and NSTX-U",
 
 \bibitem{Kronrod1965}
