tweaked log scale vs linear text

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -346,12 +346,13 @@ case ($u_\parallel = -0.646 u_0$) in the same manner as Fig.
 upper panel, which represents the measured JET ICE intensity signal; the continuous
 trace from Fig. 2 in Ref. \cite{Cottrell1993}.
 The observations of ICE intensity are plotted on a log scale scaled to match
-the range of the linear MCI growth rates. This juxtaposition is reasonable since
-nonlinear PIC code simulations indicate that all growing modes stop when the
-fastest growing mode becomes nonlinear at time $\tau$. Under the assumption
-that all modes start growing in unison from identical seed amplitudes then the
-$log$ of the amplitude of a mode with growth rate $\gamma$ is proportional to
-$\gamma \tau$, allowing for a comparison with observations also on a log scale.
+the range of the linear MCI growth rates. Direct comparison of log-scale
+ICE observations and linear growth rates is justified to the extent that
+nonlinear PIC simulations indicate that the linearly unstable modes
+cease to grow once the fastest growing mode becomes
+nonlinear\cite{Cook2013}. Hence, the $log$ of a mode's amplitude is
+proportional to its growth rate under the assumption that
+that all modes start growing in unison from identical seed amplitudes.
 There are several points worth noting about this figure. First, the
 growth rate is no longer linear with cyclotron harmonic number. Second,
 harmonics are broader due to the non-zero parallel drift that gives rise to
